@@ -1,3 +1,8 @@
+xxx, S3QL TIP(default)
+
+  * Fixed a problem with file and directory time stamps 
+    changing with the time zone of the mount.s3ql process. 
+
 2011-12-06, S3QL 1.8.1
 
   * Fixed direct updates from 1.6 to 1.8.
